--- a/chapter1.tex
+++ b/chapter1.tex
@@ -1,43 +1,70 @@
 %!TEX root =  karen.tex
 
-\begin{verbatim}
-- what is new in the thesis (summarize: 1-2 pages)
-- get all your figues
-- 1/2 page description per figures
-  All figure captions (self-contained). Don't skimp on words.
-- Previous work
-  GPUS/implicit methods
-  GPUS/RBF
-  RBF/Finite-Difference
-  Preconditionners (info on that)
-   Sparse matrix libraries
-  Various GPU/based libraries
-   Parallel implementations of RBF (there are any?)
-
-Benchmarking....
-   Timing (serial, parallel)
-   Timing with special node reorderings. Explain logic
-
-Test cases ...
-
-Get all your references in bibtex. Send them to me.
-
-
-Need detailed table of content.
- \end{verbatim}		
-
-Conditioning is defined as: 
-
-With condition number estimates we can choose a proper support parameter for uniformly distributed node sets.
-
-Alternative algorithms exist for solving for RBF-FD weights when the systems are overly ill-conditioned. Currently, we have an unpublished algorithm ContourSVD available to play with (demonstrate accuracy improvements). 
-
-We make the assumption for now that we use regularly distributed nodes. Centroidal Voronoi tessellations provide reasonably good distributions for solutions. Examples (heat ellipse, ellipsoid, sphere, square cavity).
-
-The motivation behind RBF-FD is generality/functionality in the numerical method. Scattered nodes are supported. Distribution requires proper choice of support, and tight nodes result in increased conditioning
-
 
 \chapter{Introduction}
+
+
+\subsubsection{Background on GPUs} 
+
+GPUs were introduced in 80's \hl{see master's thesis}.
+
+Originally GPUs were designed as parallel rasterizing units. They had limited logic control in contrast to the serial CPUs and their advanced branching and looping logic. 
+
+Gradually new and complex logic was added to the GPU to produce the shader languages that allowed developers to customize specific parts of the rendering pipeline. This allowed scientific problems such as the diffusion equation \hl{cite Lore and others} to be solved in process of rendering. In other words, the GPU was tricked into computing.
+
+The year 2006 brought the modern age of GPU computing with the introduction of CUDA from NVidia. The high level language allowed scientists to leverage the GPU as a parallel accelerator without all of the overhead of setting up graphics contexts and tricking the hardware into computing. Memory management is still the developer's responsibility, but compiler transforms generic C/Fortran code to GPU instruction set. 
+
+Scientific Computing has seen a widespread adoption of GPGPU because of the goal to get to ``exa-scale'' computing, which may only be possible in the near future with the help of GPU accelerators \cite{GPUandExascale2011}. 
+
+NVidia is not the only company involved in many core parallel accelerators. Other groups like AMD and Intel have been increasing the number of cores as well. The end effect is a hybridization where CPUs look similar to GPUs and vice-versa. 
+
+Until 2009, the hardware distinction required that developers target parallelism on CPUs and GPUs using different languages. Then the OpenCL standard was drafted and implemented. OpenCL is a parallel language that strives to provide functional portability rather than performance. 
+
+We focus on the OpenCL language within this dissertation with confidence that hardware will change frequently. In fact, every 18 months \hl{cite} shows a new release of GPU hardware, manycore CPU hardware and extensions to parallel languages. But if hardware is constantly changing, then we need to focus on a high level implementation that allows portability. We need a language like OpenCL to carry our implementations into the future regardless of what hardware and which company survive. 
+
+\subsubsection{Scientific problems and the need for computational methods} 
+
+Many scientific problems of importance can be expressed as a collection of partial differential equations defined for some domain. In order to solve these 
+problems , computational numerical methods are employed on a discretized version of the domain. Traditionally, three major categories exist for PDE solutions: \hl{ finite difference (FD), finite element (FEM) and spectral element (SEM)} \cite{Fasshauer:2007}. Interestingly, all three of these methods rely on an underlying mesh, making them \emph{meshed methods}. While each has had a turn in the spotlight, more recently a new category, or rather a generalization on all three previous categories, has emerged: \emph{meshfree methods}. 
+
+\subsubsection{Traditional methods (FD, FV, FEM, SEM) and their dependence on structured meshes and ``nice'' connections (e.g., Delaunay).}
+Note, finite element allows for triangle meshes, but well balanced Delaunay are preferred to limit ill conditioning. The same regularity in nodes is preferred with RBF methods. The reason for this is to keep best conditioning of the system. 
+
+Leaders in computational science are cobbled together with metaphorical bubble gum and duct tape. Many scientists neglect to plan in advance for items like: 
+\begin{itemize}
+\item generic point clouds; most methods require a point cloud include some connectivity information for structured and unstructured mesh. 
+\item we need to add adaptive mesh refinement
+\item we need to avoid pole singularities
+\item save on interpolations and differences but get similar answer in O($nm$). 
+\end{itemize} 
+
+\subsubsection{ recently, meshfree methods surfaced leveraging RBFs}
+
+\subsubsection{ RBFs have interesting history. Started with interpolation, but went to collocation with global SEM scheme. The global scheme has $O(N^{2})$ complexity.}
+
+\subsubsection{Most recently RBFs went to RBF-FD. Introduces sparsity and reduces cost of scaling.}
+
+
+\subsubsection{For RBF problems in general there is limited work that scales the methods to large problems.}
+
+
+\subsubsection{Large problems require high performance computing. Given lack of scaling in literature, it has been irrelevant until recently to assess the possibility of solving PDEs with RBF-FD on GPUs.}
+
+\subsubsection{what is new in the thesis (summarize: 1-2 pages)}
+
+The large scale contributions of this thesis can be summarized as follows: 
+\begin{itemize} 
+\item This thesis covers details related to the application of the RBF-FD method for both explicit and implicit solutions for PDES. 
+\item Our domain decomposition algorithm provides the first known parallelization of RBF-FD across multiple CPUs.
+\item Furthermore, we offload intense computational tasks to the GPU creating the first ever single- and multi-GPU implementation of RBF-FD. 
+\end{itemize}
+As part of the research on RBF-FD within those three areas we additionally contributed the following: 
+\begin{itemize} 
+\item Application of RBF-FD to Centroidal Voronoi Tessellation grids. 
+\item Approximate Nearest Neighbor methods for faster neighbor queries and improved system conditioning
+\item Multi-GPU implementations of sparse iterative Krylov solvers
+\end{itemize} 
+
 
 \subsubsection{Research Statement} 
 What motivated this research?
@@ -79,8 +106,6 @@ the domain closure with a chosen element type. While these tasks
 may be straightforward in one- or two-dimensions, the extension
 into higher dimensions becomes increasingly more cumbersome
 \cite{Li2007}. 
-%Also, in higher dimensions some methods either function only under special
-%circumstances (e.g., regular grids), or fail altogether \cite{Li:2007}. 
 
 Complex geometries, irregular boundaries and mesh refinement also pose a problem for meshed methods. As the complexity of 
 the geometry/boundaries increases, so too should the resolution of the approximating mesh in order to 
@@ -162,6 +187,9 @@ Historically, the most common way to leverage RBFs for PDE solutions is in a glo
 at a node location is a linear combination of all the function values over the \textit{entire} domain, just as in a pseudospectral method. If using infinitely smooth RBFs, this leads to spectral (exponential) convergence of the RBF interpolant for smooth data \cite{Fornberg2005}. %(need reference 
 As discussed in {\cite{FlyerWright09}}, global RBF methods 
 require $O(N^3)$ floating point operations (FLOPs) in pre-processing, where $N$ is the total number of nodes, to assemble and solve a dense linear system for differentiation coefficients. The coefficients in turn are assembled into a dense Differentiation Matrix (DM) that is applied via matrix-vector multiply to compute derivatives at all $N$ nodes for a cost of $O(N^2)$ operations. \hl{assumes explicit scheme}
+
+
+
 % 
 %   require a 
 %preprocessing stage, executed once, to assemble and solve a linear 
@@ -193,8 +221,16 @@ Given $N$ total nodes in the domain (such as on the surface of a sphere), $N$ li
 \chapter{Related Work}
 
 \section{  GPUS for explicit and implicit methods }
+
+
+
 \section{  GPUS/RBF }
+
+\cite{Schmidt2009a,Schmidt2009b}. Our paper \cite{BolligFlyerErlebacher2012} introduced the first implementation of RBF-FD to span multiple CPUs and multiple GPUs. 
+
 \section{  RBF/Finite-Difference }
+
+\subsection{Global RBF Method}
 
 \subsection{RBF-FD}
 RBF-FD have been successfully employed for a variety of problems including Hamilton-Jacobi equations \cite{Cecil2004}, convection-diffusion problems \cite{Chandhini2007, Stevens2009b},
@@ -275,3 +311,64 @@ With CPUs tending toward many cores, and the once special purpose, many-core GPU
 Petascale computing centers around the world are leveraging GPU accelerators to achieve peak performance. In fact, many of today's high performance computing installations boast significantly more GPU accelerators than CPU counterparts. The Keeneland project is one such example, currently with 240 CPUs accompanied by 360 NVidia Fermi class GPUs with at least double that number expected by the end of 2012 \cite{Vetter2011}. 
 
 Such throughput oriented architectures require developers to decompose problems into thousands of independent parallel tasks in order to fully harness the capabilities of the hardware. To this end, a plethora of research has been dedicated to researching algorithms in all fields of computational science. Of interest to us are methods for atmospheric- and geo-sciences. 
+
+
+\section{Fragments} 
+
+\begin{verbatim}
+- what is new in the thesis (summarize: 1-2 pages)
+- get all your figues
+- 1/2 page description per figures
+  All figure captions (self-contained). Don't skimp on words.
+- Previous work
+  GPUS/implicit methods
+  GPUS/RBF
+  RBF/Finite-Difference
+  Preconditionners (info on that)
+   Sparse matrix libraries
+  Various GPU/based libraries
+   Parallel implementations of RBF (there are any?)
+
+Benchmarking....
+   Timing (serial, parallel)
+   Timing with special node reorderings. Explain logic
+
+Test cases ...
+
+Get all your references in bibtex. Send them to me.
+
+
+Need detailed table of content.
+ \end{verbatim}		
+
+
+
+
+
+
+As will be demonstrated in Chapter~\ref{chap:related}, most of the literature surrounding the solution of PDEs with RBFs is based on 
+collocation. Collocation finds an interpolant that passes through a set of \emph{collocation points} (commonly chosen to coincide with RBF centers) satisfying the differential equations with zero residual. Collocation, then, is a global interpolation problem. Alternative methods exist based on local collocation formulations (see \cite{Sarler:2006, Vertnik:2006,Stevens:2008a, Stevens:2009a, Stevens:2009b}). Recently, an new approach using FD-like stencils to approximate 
+differential operators was proposed  (see e.g., \cite{Wright:2003, Wright:2006, Shu:2003, Chandhini:2007}). The so-called RBF-FD method uses RBFs to interpolate initial conditions, but not the differential equations---generalized FD stencils approximate differential operators. 
+
+Even today, RBFs are still up-and-coming in the scientific world with many avenues of research left to consider. Global formulations are understood to have spectral convergence properties, high accuracy and other benefits like adaptivity and ease of implementation over meshed methods \cite{Fasshauer:2007}. However, little is known about the behavior of local and RBF-FD methods. Open questions include (but are in no way limited to): a) ideal node placement to eliminate singularities; b) data-structures for stencil storage and evaluation; c) problem sizes larger than a few thousand nodes; and d) parallel implementations across new heterogeneous multi- and many-core architectures. In response to this, our group, in collaboration with researchers assembled from a national lab and four universities (see Chapter~\ref{chap:funding}), has been granted funds by the National Science Foundation to collaboratively:
+
+\begin{quote}
+\emph{``Bring RBFs to the forefront of multi-scale geophysical modeling by developing fast, efficient, and parallelizable RBF algorithms in arbitrary geometries, with performance enhanced by hardware accelerators, such as graphic processing units (GPUs)."} \cite{RBF_proposal:2009}
+\end{quote}
+
+In the last few years, GPUs transitioned from hardware dedicated to the embarrassingly parallel tasks involved in graphics rendering (e.g., 
+rasterization) into multi-core co-processors for high performance scientific computing.  Thanks to the highly profitable and always demanding gaming industry, what began as a static rendering pipeline, was molded to allow fully dynamic execution with a SIMD-like programming model (Single Instruction Multiple Threads or SIMT). Changes in hardware were 
+followed closely by evolving programming languages. Today, GPUs can be manipulated via high level 
+languages 
+similar to C/C++ and require no knowledge of computer graphics. 
+In Chapters~\ref{chap:languages} and \ref{chap:hardware} we will discuss 
+how GPU hardware and languages evolved to exceptionally higher compute capability than traditional CPUs, and became a popular platform for high performance computing.
+
+True to our purpose statement above, the goal of this project is to integrate RBF methods for PDEs, Geophysics and large scale GPU computing. We begin in Chapter~\ref{chap:related} with a discussion of related work on RBF-PDE methods, their applications, and related work 
+on GPUs. In Chapter~\ref{chap:rbf_pde} a formal introduction to RBFs for the solution of PDEs is provided. Chapter~\ref{chap:languages} considers various languages available for GPU computing and 
+their appropriateness for our task. This is followed by a 
+discussion in Chapter~\ref{chap:hardware} of GPU hardware and the large scale clusters with integrated GPUs which will be used for heterogeneous multi-core computing. Finally, in Chapter~\ref{chap:proposal} we present our proposal for research into efficient PDE 
+solutions on multi-node, multi-GPU compute clusters using radial basis functions for Tsunami simulation.
+
+
+
