--- a/chapter6.tex
+++ b/chapter6.tex
@@ -488,3 +488,6 @@ We want to express benchmarks in terms of the number of GMRES iterations per sec
 Need to describe the solver. 
 
 State that the conditions under which a problem is solved determines how quickly it will converge. For example, nodes too close together on delaunay meshes cause higher condition numbers and require more iterations. Proper choice of preconditioners can dramatically reduce the number of iterations required to converge. Although preconditioners incur an additional cost in preprocessing and at each iteration of the solver, the potential number of iterations they save 
+
+
+John Dennis dissertation has a list of nice datasets (compare the list to Hoth) and their preconditioners. We might list similar paramters used for results here. 
