--- a/karen.tex
+++ b/karen.tex
@@ -88,64 +88,24 @@
 
 \input{chapter1.tex}
 \input{chapter2.tex}
-\input{chapter3.tex} 
-\input{chapter4.tex} 
-\input{chapter5.tex} 
-\input{chapter6.tex}
-\input{chapter7.tex}
+%\input{chapter3.tex} 
+%\input{chapter4.tex} 
+%\input{chapter5.tex} 
+%\input{chapter6.tex}
+%\input{chapter7.tex}
+%\input{publications.tex}
 
-\input{publications.tex}
 need Survey of goals stated in prospectus and whether they were completed or not (Probably part of slides, not actual dissertation)
 
-%\chapter{Review}
-%\begin{itemize} 
-%	\item Review of the Literature (don\UTF{201A}\UTF{00C4}\UTF{00F4}t make the mistake of reviewing after rather than before data collection in qualitative studies)
-%	\item The more references the better
-%	\item All relevant, reliable, and recent studies be included
-%	\item Organization is critical 
-%	\item Compare, contrast, and evaluate previous studies
-%\end{itemize}
-%
-%\chapter{Research Methodology}
-%\begin{itemize} 
-%	\item Research Perspective: type of methodology and why it is the best way to answer your research question
-%	\item Context and Access: where, when, and how you will \UTF{00D4}¨Ånd participants 
-% 	\item Instrumentation: include copy in appendix or in text if using survey or interview questions
-% 	\item Procedure: be specific so a reader could imitate your study 
-% 	\item Data Analysis: again, specific down to the computer program used for statistics
-% 	\item Qualitative methods
-% 	\item Data Sources
-% 	\item Data Collection
-% 	\item Data Analysis
-% 	\item Verification
-% 	\item Ethical Considerations
-%\end{itemize} 
-%
-%\chapter{Findings}
-%\begin{itemize} 
-%	\item Research Findings (Will be regularly updated)
-%	\item Presentation of Data (Graphs, charts, tables, etc)
-%	\item Timings, Convergence Rates, etc.
-%\end{itemize} 
-%
-%\chapter{Summary}
-%\begin{itemize} 
-%\item Summary (what should readers find in document)
-%\item Conclusions (what are the improvements made, what algorithms are demonstrated effective?)
-%\item Discussion
-%\item Suggestions for future research
-%\end{itemize} 
 %%\input{introduction.tex} 
 %%\input{grid_generation.tex}
 %%\input{parabolic_equations.tex}
 %%\input{hyperbolic_equations.tex}
 %%\input{parallel_gmres.tex} 
 
-\appendix
-\input{appendix1.tex}
-\input{appendix2.tex}
-%\chapter{TODO}
-%\input todolist
+%\appendix
+%\input{appendix1.tex}
+%\input{appendix2.tex}
 
 % The BibTeX bibliography/references section.  View the file
 % 'myrefs.bib' to get a feel for what these entries may look like.
